exports[`Layout renders with props 1`] = `
<div style={{...}} className="background--light-primary">
<section className="hard background--light-secondary">
<h6 className="push-left soft-half-bottom soft-top">
Recommended by NewSpring
</h6>
</section>
<DiscoverHero link="test-title" image="http://test.com/2x1.jpg" topicName="test title" />
<section className="soft-half background--light-secondary">
<div className="grid">
<LikesItem like={{...}} />
<LikesItem like={{...}} />
</div>
</section>
<div className="soft-half background--light-secondary">
<div className="card soft one-whole">
<div className="card__item">
<p className="flush">
<small>
<em>
Are you looking for 
<span>
<Link to="text-one" onlyActiveOnIndex={false} style={{...}}>
text one
</Link>
</span>
<span>
<Link to="text-two" onlyActiveOnIndex={false} style={{...}}>
text two
</Link>
</span>
?
</em>
</small>
</p>
</div>
</div>
</div>
</div>
`;

exports[`Layout works without featured item 1`] = `
<div style={{...}} className="background--light-primary">
<section className="hard background--light-secondary">
<h6 className="push-left soft-half-bottom soft-top">
Recommended by NewSpring
</h6>
</section>
<section className="soft-half background--light-secondary">
<div className="grid">
<LikesItem like={{...}} />
<LikesItem like={{...}} />
</div>
</section>
<div className="soft-half background--light-secondary">
<div className="card soft one-whole">
<div className="card__item">
<p className="flush">
<small>
<em>
Are you looking for 
<span>
<Link to="text-one" onlyActiveOnIndex={false} style={{...}}>
text one
</Link>
</span>
<span>
<Link to="text-two" onlyActiveOnIndex={false} style={{...}}>
text two
</Link>
</span>
?
</em>
</small>
</p>
</div>
</div>
</div>
</div>
`;
